--- a/requirements.txt
+++ b/requirements.txt
@@ -1,378 +1,12 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
-_anaconda_depends=2020.02=py38_0
-absl-py=0.9.0=pypi_0
-alabaster=0.7.12=py_0
-anaconda=custom=py38_1
-anaconda-client=1.7.2=py_0
-anaconda-project=0.8.3=py_0
-argh=0.26.2=py38_1001
-arviz=0.9.0=pypi_0
-asn1crypto=1.3.0=py38h32f6830_1
-astroid=2.4.2=py38h32f6830_0
-astropy=4.0.1.post1=py38h9de7a3e_0
-astunparse=1.6.3=pypi_0
-atomicwrites=1.4.0=pyh9f0ad1d_0
-attrs=19.3.0=py_0
-autoimpute=0.12.0=pypi_0
-autopep8=1.5.3=pyh9f0ad1d_0
-babel=2.8.0=py_0
-backcall=0.2.0=pyh9f0ad1d_0
-backports=1.0=py_2
-backports.shutil_get_terminal_size=1.0.0=py_3
-bcrypt=3.1.7=py38h9de7a3e_1
-beautifulsoup4=4.9.1=py38h32f6830_0
-bitarray=1.4.0=py38h1e8a9f7_0
-bkcharts=0.2=py38_0
-blas=1.0=mkl
-bleach=3.1.5=pyh9f0ad1d_0
-blosc=1.19.0=ha925a31_0
-bokeh=2.1.1=py38h32f6830_0
-boto=2.49.0=py_0
-bottleneck=1.3.2=py38h4b8e87e_1
-brotli=1.0.7=ha925a31_1004
-brotlipy=0.7.0=py38h1e8a9f7_1000
-bzip2=1.0.8=hfa6e2cd_2
-ca-certificates=2020.6.20=hecda079_0
-cachetools=4.1.1=pypi_0
-certifi=2020.6.20=py38h32f6830_0
-cffi=1.14.0=py38ha419a9e_0
-cftime=1.1.3=pypi_0
-chardet=3.0.4=py38h32f6830_1006
-charls=2.1.0=h33f27b4_2
-click=7.1.2=pyh9f0ad1d_0
-cloudpickle=1.5.0=py_0
-clyent=1.2.2=py_1
-colorama=0.4.3=py_0
-combo=0.1.0=pypi_0
-comtypes=1.1.7=py38h32f6830_1001
-console_shortcut=0.1.1=4
-contextlib2=0.6.0.post1=py_0
-cryptography=2.9.2=py38hba49e27_0
-curl=7.71.1=h4b64cdc_1
-cycler=0.10.0=py_2
-cython=0.29.21=py38h7ae7562_0
-cytoolz=0.10.1=py38hfa6e2cd_0
-dask=2.20.0=py_0
-dask-core=2.20.0=py_0
-dask-glm=0.2.0=pypi_0
-dask-ml=1.5.0=pypi_0
-dask-xgboost=0.1.10=pypi_0
-deap=1.3.1=pypi_0
-decorator=4.4.2=py_0
-defusedxml=0.6.0=py_0
-diff-match-patch=20200713=pyh9f0ad1d_0
-distributed=2.20.0=py38h32f6830_0
-docutils=0.16=py38h32f6830_1
-entrypoints=0.3=py38h32f6830_1001
-et_xmlfile=1.0.1=py_1001
-fastapi=0.58.1=pypi_0
-fastcache=1.1.0=py38h9de7a3e_1
-fastprogress=0.2.3=pypi_0
-featuretools=0.17.0=py_0
-filelock=3.0.12=pyh9f0ad1d_0
-flake8=3.8.3=py_1
-flask=1.1.2=pyh9f0ad1d_0
-freetype=2.10.2=hd328e21_0
-fsspec=0.7.4=py_0
-future=0.18.2=py38h32f6830_1
-gast=0.3.3=pypi_0
-get_terminal_size=1.0.0=h38e98db_0
-gevent=20.6.2=py38h1e8a9f7_0
-giflib=5.2.1=h2fa13f4_2
-git=2.27.0=0
-glob2=0.7=py_0
-google-auth=1.18.0=pypi_0
-google-auth-oauthlib=0.4.1=pypi_0
-google-pasta=0.2.0=pypi_0
-graphviz=2.38.0=h6538335_1011
-greenlet=0.4.16=py38h1e8a9f7_0
-grpcio=1.30.0=pypi_0
-h5py=2.10.0=nompi_py38ha551744_103
-hdf5=1.10.6=nompi_ha405e13_100
-heapdict=1.0.1=py_0
-html5lib=1.1=pyh9f0ad1d_0
-hyperopt=0.2.4=pypi_0
-hypothesis=5.19.2=py_0
-icc_rt=2019.0.0=h0cc432a_1
-icu=64.2=he025d50_1
-idna=2.10=pyh9f0ad1d_0
-imagecodecs=2020.5.30=py38h2dff1b1_2
-imageio=2.9.0=py_0
-imagesize=1.2.0=py_0
-importlib-metadata=1.7.0=py38h32f6830_0
-importlib-resources=2.0.1=pypi_0
-importlib_metadata=1.7.0=0
-impyute=0.0.8=pypi_0
-iniconfig=1.0.0=pyh9f0ad1d_0
-intel-openmp=2019.4=245
-intervaltree=3.0.2=py_0
-ipykernel=5.3.0=py38h5ca1d4c_0
-ipython=7.16.1=py38h23f93f0_0
-ipython_genutils=0.2.0=py_1
-ipywidgets=7.5.1=py_0
-isort=4.3.21=py38h32f6830_1
-itsdangerous=1.1.0=py_0
-jdcal=1.4.1=py_0
-jedi=0.15.2=py38_0
-jinja2=2.11.2=pyh9f0ad1d_0
-joblib=0.16.0=py_0
-jpeg=9d=he774522_0
-json5=0.9.4=pyh9f0ad1d_0
-jsonschema=3.2.0=py38h32f6830_1
-jupyter=1.0.0=py_2
-jupyter_client=6.1.6=py_0
-jupyter_console=6.1.0=py_1
-jupyter_core=4.6.3=py38h32f6830_1
-jupyterlab=2.1.5=py_0
-jupyterlab_server=1.2.0=py_0
-jxrlib=1.1=hfa6e2cd_2
-keras-preprocessing=1.1.2=pypi_0
-keyring=21.2.1=py38h32f6830_0
-kiwisolver=1.2.0=py38heaebd3c_0
-krb5=1.17.1=hc04afaa_1
-lazy-object-proxy=1.4.3=py38h9de7a3e_2
-lcms2=2.11=he1115b7_0
-lerc=2.2=ha925a31_0
-libaec=1.0.4=he025d50_1
-libarchive=3.3.3=h0c0e0cf_1008
-libblas=3.8.0=14_mkl
-libcblas=3.8.0=14_mkl
-libclang=9.0.1=default_hf44288c_0
-libcurl=7.71.1=h4b64cdc_1
-libiconv=1.15=hfa6e2cd_1006
-liblapack=3.8.0=14_mkl
-libpng=1.6.37=hfe6a214_1
-libsodium=1.0.17=h2fa13f4_0
-libspatialindex=1.9.3=he025d50_3
-libssh2=1.9.0=hb06d900_3
-libtiff=4.1.0=h885aae3_6
-libwebp-base=1.1.0=hfa6e2cd_3
-libxml2=2.9.10=h5d81f1c_1
-libxslt=1.1.33=h579f668_1
-libzopfli=1.0.3=ha925a31_0
-lightgbm=2.3.1=pypi_0
-linearmodels=4.17=pypi_0
-llvmlite=0.32.1=py38h32f6830_0
-locket=0.2.0=py_2
-lxml=4.5.2=py38he3d0fc9_0
-lz4-c=1.9.2=h62dcd97_1
-lzo=2.10=hfa6e2cd_1000
-m2w64-gcc-libgfortran=5.3.0=6
-m2w64-gcc-libs=5.3.0=7
-m2w64-gcc-libs-core=5.3.0=7
-m2w64-gmp=6.1.0=2
-m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-markdown=3.2.2=pypi_0
-markupsafe=1.1.1=py38h9de7a3e_1
-matplotlib=3.2.2=1
-matplotlib-base=3.2.2=py38hbe5506b_1
-mccabe=0.6.1=py_1
-menuinst=1.4.16=py38_0
-missingno=0.4.2=pypi_0
-mistune=0.8.4=py38h9de7a3e_1001
-mkl=2019.4=245
-mkl-service=2.3.0=py38hfa6e2cd_0
-mkl_fft=1.1.0=py38hc8d92b1_1
-mkl_random=1.1.0=py38he350917_0
-mlbox=0.8.4=pypi_0
-mock=4.0.2=py38h32f6830_0
-more-itertools=8.4.0=py_0
-mpmath=1.1.0=py_0
-msgpack-python=1.0.0=py38heaebd3c_1
-msys2-conda-epoch=20160418=1
-multipledispatch=0.6.0=py_0
-mypy-extensions=0.4.3=pypi_0
-nbconvert=5.6.1=py38h32f6830_1
-nbformat=5.0.7=py_0
-netcdf4=1.5.3=pypi_0
-networkx=2.4=py_1
-nltk=3.4.4=py_0
-nose=1.3.7=py38h32f6830_1004
-notebook=6.0.3=py38h32f6830_1
-numba=0.49.1=py38he6e81aa_0
-numexpr=2.7.1=py38h7ae7562_1
-numpy=1.18.2=pypi_0
-numpy-base=1.18.5=py38hc3f5095_0
-numpydoc=1.1.0=pyh9f0ad1d_0
-oauthlib=3.1.0=pypi_0
-olefile=0.46=py_0
-openjpeg=2.3.1=h57dd2e7_3
-openpyxl=3.0.4=py_0
-openssl=1.1.1g=he774522_0
-opt-einsum=3.2.1=pypi_0
-packaging=20.4=pyh9f0ad1d_0
-pandas=1.0.5=py38he6e81aa_0
-pandoc=2.10=0
-pandocfilters=1.4.2=py_1
-paramiko=2.7.1=py38_0
-parso=0.5.2=py_0
-partd=1.1.0=py_0
-path=13.1.0=py38_0
-path.py=12.4.0=0
-pathlib2=2.3.5=py38h32f6830_1
-pathtools=0.1.2=py_1
-patsy=0.5.1=py_0
-pep8=1.7.1=py_0
-pexpect=4.8.0=py38h32f6830_1
-pickleshare=0.7.5=py38h32f6830_1001
-pillow=7.2.0=py38h7011068_1
-pip=20.1.1=py_1
-pkginfo=1.5.0.1=py_0
-pluggy=0.13.1=py38h32f6830_2
-ply=3.11=py_1
-powershell_shortcut=0.0.1=3
-prometheus_client=0.8.0=pyh9f0ad1d_0
-prompt-toolkit=3.0.5=py_1
-prompt_toolkit=3.0.5=1
-property-cached=1.6.4=pypi_0
-protobuf=3.12.2=pypi_0
-psutil=5.7.0=py38h9de7a3e_1
-py=1.9.0=pyh9f0ad1d_0
-pyasn1=0.4.8=pypi_0
-pyasn1-modules=0.2.8=pypi_0
-pycodestyle=2.6.0=pyh9f0ad1d_0
-pycosat=0.6.3=py38h9de7a3e_1004
-pycparser=2.20=pyh9f0ad1d_2
-pycurl=7.43.0.5=py38h54ba1c0_2
-pydantic=1.5.1=pypi_0
-pydocstyle=5.0.2=py_0
-pyflakes=2.2.0=pyh9f0ad1d_0
-pygments=2.6.1=py_0
-pylint=2.5.3=py38h32f6830_0
-pymc3=3.9.2=pypi_0
-pynacl=1.3.0=py38h2fa13f4_1001
-pyod=0.8.0=pypi_0
-pyodbc=4.0.30=py38h6538335_0
-pyopenssl=19.1.0=py_1
-pyparsing=2.4.7=pyh9f0ad1d_0
-pyqt=5.12.3=py38h7ae7562_3
-pyqt5-sip=4.19.18=pypi_0
-pyqtchart=5.12=pypi_0
-pyqtwebengine=5.12.1=pypi_0
-pyreadline=2.1=py38_1001
-pyrsistent=0.16.0=py38h9de7a3e_0
-pysocks=1.7.1=py38h32f6830_1
-pytables=3.6.1=py38hd2a2a0e_2
-pytest=6.0.0rc1=py38h32f6830_1
-pytest-arraydiff=0.3=py_0
-pytest-astropy=0.7.0=py_0
-pytest-astropy-header=0.1.2=py_0
-pytest-doctestplus=0.7.0=py_1
-pytest-openfiles=0.5.0=py_0
-pytest-remotedata=0.3.1=py_0
-python=3.8.3=cpython_h5fd99cc_0
-python-dateutil=2.8.1=py_0
-python-graphviz=0.14.1=pyh9f0ad1d_0
-python-jsonrpc-server=0.3.4=pyh9f0ad1d_1
-python-language-server=0.31.9=py38_0
-python-libarchive-c=2.9=py38_0
-python_abi=3.8=1_cp38
-pytz=2020.1=pyh9f0ad1d_0
-pywavelets=1.1.1=py38h40bdaab_1
-pywin32=225=pypi_0
-pywin32-ctypes=0.2.0=py38h32f6830_1001
-pywinpty=0.5.7=py38_0
-pyyaml=5.3.1=py38h9de7a3e_0
-pyzmq=19.0.1=py38h77b9d75_0
-qdarkstyle=2.8.1=pyh9f0ad1d_0
-qt=5.12.5=h7ef1ec2_0
-qtawesome=0.7.2=pyh9f0ad1d_0
-qtconsole=4.7.5=pyh9f0ad1d_0
-qtpy=1.9.0=py_0
-requests=2.24.0=pyh9f0ad1d_0
-requests-oauthlib=1.3.0=pypi_0
-rope=0.17.0=pyh9f0ad1d_0
-rope-py3k=0.9.4.post1=pypi_0
-rsa=4.6=pypi_0
-rtree=0.9.4=py38h7ad75cc_1
-ruamel_yaml=0.15.80=py38h9de7a3e_1001
-scikit-image=0.17.2=py38he6e81aa_1
-scikit-learn=0.23.1=py38ha1d60b4_0
-scipy=1.4.1=pypi_0
-seaborn=0.10.1=1
-seaborn-base=0.10.1=py_1
-send2trash=1.5.0=py_0
-setuptools=49.1.0=pypi_0
-simplegeneric=0.8.1=py_1
-singledispatch=3.4.0.3=py38_1000
-sip=4.19.23=py38h7ae7562_0
-six=1.15.0=pyh9f0ad1d_0
-snappy=1.1.8=ha925a31_3
-snowballstemmer=2.0.0=py_0
-sortedcollections=1.2.1=pyh9f0ad1d_0
-sortedcontainers=2.2.2=pyh9f0ad1d_0
-soupsieve=2.0.1=py38h32f6830_0
-sphinx=3.1.2=py_0
-sphinxcontrib=1.0=py38_1
-sphinxcontrib-applehelp=1.0.2=py_0
-sphinxcontrib-devhelp=1.0.2=py_0
-sphinxcontrib-htmlhelp=1.0.3=py_0
-sphinxcontrib-jsmath=1.0.1=py_0
-sphinxcontrib-qthelp=1.0.3=py_0
-sphinxcontrib-serializinghtml=1.1.4=py_0
-sphinxcontrib-websupport=1.2.3=pyh9f0ad1d_0
-spyder=4.1.3=py38h32f6830_0
-spyder-kernels=1.9.2=py38h32f6830_0
-sqlalchemy=1.3.18=py38h1e8a9f7_0
-sqlite=3.32.3=he774522_1
-starlette=0.13.4=pypi_0
-statsmodels=0.11.1=py38h1e8a9f7_2
-stopit=1.1.2=pypi_0
-suod=0.0.4=pypi_0
-sweetviz=1.0a7=pypi_0
-sympy=1.6.1=py38h32f6830_0
-tbb=2020.1=he980bc4_0
-tblib=1.6.0=py_0
-tensorboard=2.2.2=pypi_0
-tensorboard-plugin-wit=1.7.0=pypi_0
-tensorflow=2.3.0rc0=pypi_0
-terminado=0.8.3=py38h32f6830_1
-testpath=0.4.4=py_0
-tf-estimator-nightly=2.3.0.dev2020062301=pypi_0
-theano=1.0.4=pypi_0
-threadpoolctl=2.1.0=pyh5ca1d4c_0
-tifffile=2020.7.4=py_0
-tk=8.6.10=hfa6e2cd_0
-toml=0.10.1=pyh9f0ad1d_0
-toolz=0.10.0=py_0
-tornado=6.0.4=py38hfa6e2cd_0
-tpot=0.11.5=pypi_0
-tqdm=4.47.0=pyh9f0ad1d_0
-traitlets=4.3.3=py38h32f6830_1
-typing_extensions=3.7.4.2=py_0
-ujson=1.35=py38hb99c5c2_1002
-unicodecsv=0.14.1=py_1
-update-checker=0.17=pypi_0
-urllib3=1.25.9=py_0
-vc=14.1=h869be7e_1
-vs2015_runtime=14.16.27012=h30e32a0_2
-watchdog=0.10.3=py38h32f6830_0
-wcwidth=0.2.5=pyh9f0ad1d_0
-webencodings=0.5.1=py_1
-werkzeug=1.0.1=pyh9f0ad1d_0
-wheel=0.34.2=pypi_0
-widgetsnbextension=3.5.1=py38h32f6830_1
-win_inet_pton=1.1.0=py38_0
-win_unicode_console=0.5=py38_1000
-wincertstore=0.2=py38_1003
-winpty=0.4.3=4
-wrapt=1.11.2=py38h9de7a3e_0
-xarray=0.15.1=pypi_0
-xgboost=1.1.1=pypi_0
-xlrd=1.2.0=py_0
-xlsxwriter=1.2.9=pyh9f0ad1d_0
-xlwings=0.19.5=py38h32f6830_0
-xlwt=1.3.0=py_1
-xz=5.2.5=h62dcd97_1
-yaml=0.2.5=he774522_0
-yapf=0.29.0=py_0
-zeromq=4.3.2=ha925a31_3
-zfp=0.5.5=ha925a31_1
-zict=2.0.0=py_0
-zipp=3.1.0=py_0
-zlib=1.2.11=h2fa13f4_1006
-zope.event=4.4=pyh9f0ad1d_0
-zope.interface=5.1.0=py38h9de7a3e_0
-zstd=1.4.4=h9f78265_3
+
+setuptools~=49.2.0
+dask~=2.20.0
+autoimpute~=0.12.0
+pandas~=0.25.3
+numpy~=1.18.2
+pyod~=0.8.1
+sweetviz~=1.0a8
+tpot~=0.11.5
